glibc (2.22-10) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * debian/control.in/main: build-depends on dpkg (>= 1.18.7) instead of
    dpkg-dev (>= 1.18.7) as the cputable file is in dpkg, not dpkg-dev.
    Closes: #824127.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-i686-link.diff: Fix link of i686 build.
  * sysdeps/hurd-i386.mk: Re-enable xen build.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 May 2016 18:06:35 +0200

glibc (2.22-9) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/cvs-libpthread.so.diff: Fix building malloc tests.
  * debian/testsuite-xfail-debian.mk: Update LFS tests.

  [ Aurelien Jarno ]
  * debian/testsuite-xfail-debian.mk: drop check on i586 flavours.
  * debian/patches/kfreebsd/local-tst-malloc-backtrace.diff: drop, obsoleted
    by hurd-i386/cvs-libpthread.so.diff.
  * debian/patches/arm/unsubmitted-ldconfig-cache-abi.diff: correctly apply
    patch. Really fix #822489.
  * control.in/main: Bump Standards-Version to 3.9.8 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 May 2016 12:55:01 +0200

glibc (2.22-8) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/cvs-gprof-tick.diff: Cherry-pick from upstream to fix gprof
    timing.
  * hurd-i386/cvs-IPV6_PKTINFO.diff: Cherry-pick from upstream to fix
    IPV6_*PKT* macros.

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - Fix a buffer overflow in the glob function (CVE-2016-1234).
    - Fix a stack overflow in getaddrinfo function (CVE-2016-3706).
    - Fix nss_hesiod breakage.  Closes: #821358.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6051 (from
    glibc-bsd) to fix FTBFS and provide PT_FOLLOW_FORK in sys/ptrace.h.
    Closes: #822143, #823387.
  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: apply fix from Steve
    McIntyre to fix an armhf ABI detection crash in ldconfig on arm64.
    Closes: #822489.
  * debian/control.in/main: upgrade breaks on binutils. This is plainly