@@ -7,6 +7,7 @@ glibc (2.22-10) UNRELEASED; urgency=medium
 
   [ Samuel Thibault ]
   * patches/hurd-i386/cvs-i686-link.diff: Fix link of i686 build.
+  * sysdeps/hurd-i386.mk: Disable ifunc, not working yet.
   * sysdeps/hurd-i386.mk: Re-enable xen build.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 May 2016 18:06:35 +0200
